✨feat: 알림 조회 및 상태 업데이트